@@ -19,6 +19,8 @@ The rules for this file:
 
 Fixes
   * Fix deletion of bond/angle/dihedral types (PR #4003, Issue #4001)
+  * CRD, PQR, and PDBQT writers now write BZ2 and GZ files if requested
+    (PR #4163, Issue #4159)
 
 Enhancements
 
